Possible image scaling on iOS fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,7 @@ sub {
 
 .img-inline {
 	margin-bottom: 1rem;
+	width: 100%;
 }
 
 .highlight {
